--- a/préparation.ipynb
+++ b/préparation.ipynb
@@ -332,8 +332,8 @@
     "coauthoring_graph = nx.Graph()\n",
     "\n",
     "for col in tqdm(data_for_graph.columns):\n",
-    "    if \"cites\" in col:\n",
-    "        G0 = get_edge(data_for_graph, data_for_graph[col], \"cites\")\n",
+    "    if \"creator\" in col:\n",
+    "        G0 = get_edge(data_for_graph, data_for_graph[col], \"creator\")\n",
     "        coauthoring_graph = nx.compose(coauthoring_graph, G0)\n"
    ]
   },
